--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,16 @@
 <html>
   <head>
     <title>Pesteco</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application',
+    'https://fonts.googleapis.com/css?family=Roboto:400,700',
+    media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <%= cloudinary_js_config %>
     <meta name="viewport" content="minimal-ui, width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
     <%= favicon_link_tag 'pesteco_favicon.png', type: 'image/png' %>
     <%= favicon_link_tag 'pesteco_favicon.png', rel: 'apple-touch-icon', type: 'image/png' %>
   </head>
