updated meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
     <meta name="viewport" content="minimal-ui, width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="preventive pest management specialises in residential, strata and commercial pest management." />
+    <meta name="author" />
+    <meta name="keywords" content="Pest Management, Eastern Suburbs Pest Management, pest control, bogdan kolev, pest extermination, cockroach control, termite control, termites extermination, maroubra pest control">
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
     <%= favicon_link_tag 'pesteco_favicon.png', type: 'image/png' %>
     <%= favicon_link_tag 'pesteco_favicon.png', rel: 'apple-touch-icon', type: 'image/png' %>
@@ -81,7 +85,7 @@
       <div class="row">
         <div class="col-12 right">
           <div class="container">
-          <small>Website designed and coded by <a href="https://au.linkedin.com/in/howard-mann-17450933" target="_blank">Howie Mann</a></small>
+          <small>Web app by <a href="https://www.howiemann.tech" target="_blank">Howie Mann</a></small>
           </div>
         </div>
       </div>
