--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-12 right">
           <div class="container">
-          <small>Web app by <a href="https://www.howiemann.tech" target="_blank">Howie Mann</a></small>
+          <small>Web app by <a href="http://www.howiemann.tech" target="_blank">Howie Mann</a></small>
           </div>
         </div>
       </div>
