--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -9,4 +9,4 @@
 
 <p><strong>Pesteco</strong></p>
 <p>Bogdan Kolev</p>
-<p><%= link_to 'www.pesteco.com.au', root_url %></p>
+<p><%= link_to 'dashboard.pesteco.com.au', root_url %></p>
