--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,9 +28,19 @@
     <%= link_to login_path do %>
       <button>Client dashboard login</button>
     <% end %>
+  </div>
+</div>
+
+<div class="row row-shade client">
+  <div class="col-12 center">
+    <h3 class='client-heading'>The trusted pest control expert across Australia’s leading properties</h3>
+    <div class="col col-12">
+      <%= image_tag('client_logos.png', :class => 'client-logos') %>
+    </div>
 
   </div>
 </div>
+
 
 <div class="row row-shade">
 <div class="col-12 center">
