--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,13 +6,46 @@
 
 <div class="row">
   <div class="col col-6 offset-3 sm-col-12 center">
-    <p class="subheading">Pesteco is Australia’s <strong>most highly certified pest management company</strong> - We deliver full-service expertise across retail, hospitality, commercial and residential property sectors.</p>
+    <p class="subheading">Pesteco is Australia’s <strong>most certified pest management company</strong> - We deliver full-service expertise across retail, hospitality, commercial and residential sectors.</p>
   </div>
 </div>
 
 <div class="row">
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= image_tag('termite_logo.svg', :class => 'pest-solution') %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Termite Specialists</p>
+      <p class="solution-text">Fully certified termite detection, prevention and treatment.</p>
+    </div>
+  </div>
+
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= image_tag('insect_logo.svg', :class => 'pest-solution') %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Insect Control</p>
+      <p class="solution-text">Flying and crawling insect control and treatment solutions.</p>
+    </div>
+  </div>
+
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= image_tag('rodent_logo.svg', :class => 'pest-solution') %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Bird & Rodent Control</p>
+      <p class="solution-text">Effective programs for rat, mice, possum and bird infestations.</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
   <div class="col sm-col-12 col-6 center">
-    <h2>About us</h2>
+    <h3>About us</h3>
     <p class="left">Find out more information about our fully-certified and environmentally safe pest management solutions</p>
     <%= link_to services_path do %>
       <button class="find-out">Find out more</button>
@@ -21,8 +54,8 @@
   </div>
 
   <div class="col sm-col-12 col-6 center">
-    <h2>Pesteco clients</h2>
-    <p class="left">Existing pesteco clients can access their reports by logging in to the Pesteco Dashboard service
+    <h3>Pesteco clients</h3>
+    <p class="left">Existing Pesteco clients can access their reports by logging in to the Pesteco Dashboard service
     </p>
 
     <%= link_to login_path do %>
@@ -30,6 +63,7 @@
     <% end %>
   </div>
 </div>
+
 
 <div class="row row-shade client">
   <div class="col-12 center">
