--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,12 +4,14 @@
   <tr>
     <th>Client</th>
     <th>Venues</th>
+    <th>Reports</th>
     <th>Users</th>
   </tr>
 <% @clients.each do |client| %>
   <tr>
     <td><%= link_to client.name, client_path(client) %></td>
     <td><%= client.buildings.length %></td>
+    <td><%= client.reports.length %></td>
     <td>
       <% client.users.each do |user| %>
         <%= link_to user.name, user_path(user) %>
