--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -11,7 +11,27 @@
 <hr>
 
 <h2>Buildings</h2>
-<%= render 'shared/buildings', object: @client %>
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Address</th>
+    <th>Reports</th>
+    <th>User access</th>
+  </tr>
+  <% @client.buildings.order('name ASC').each do |building| %>
+  <tr>
+    <td><%= link_to building.name, building_path(building) %></td>
+    <td><%= building.address %></td>
+    <td><%= building.reports.length %></td>
+    <td>
+      <% building.users.each do |user| %>
+        <%= user.name %>,
+      <% end %>
+    </td>
+  </tr>
+  <% end %>
+</table>
 
 <br>
 
