--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -10,7 +10,7 @@
 
 <hr>
 
-<h2>Buildings</h2>
+<h2>Client Admin: All Buildings</h2>
 
 <table>
   <tr>
@@ -26,7 +26,7 @@
     <td><%= building.reports.length %></td>
     <td>
       <% building.users.each do |user| %>
-        <%= user.name %>,
+        <%= user.name.split(' ')[0] %>,
       <% end %>
     </td>
   </tr>
@@ -48,17 +48,21 @@
   <tr>
     <th>Name</th>
     <th>Email</th>
+    <th>Admin</th>
+    <th>Buildings</th>
   </tr>
   <% @client.users.each do |user| %>
   <tr>
+    <td><%= link_to user.name, user_path(user) %></td>
+    <td><%= user.email %></td>
     <td>
-      <% if @current_user == user || @current_user.admin%>
-        <%= link_to user.name, user_path(user) %>
+      <% if user.client_admin%>
+        yes
       <% else %>
-        <%= user.name  %>
+        no
       <% end %>
     </td>
-    <td><%= user.email %></td>
+    <td><%=user.buildings.length%></td>
   </tr>
   <% end %>
 </table>
