--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col col-12 center">
     <span class="heading">The Pest Control Experts</span>
+    <h2>TEST FAKER</h2>
   </div>
 </div>
 
