--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -400,7 +400,10 @@ th, td {
 th {
   background-color: white;
 }
-
+tr.client-summary th {
+  background-color: $color-primary3;
+  font-style: italic;
+}
 
 /* Phone size */
 @media (max-width: 760px) {
