--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @group.name %></h1>
+<p>Client: <%= link_to @group.client.name, client_path(@group.client) %></p>
 
 <% if @current_user && @current_user.admin %>
   <p>
@@ -6,3 +7,7 @@
     <%= link_to 'Delete Group', client_group_path(@client, @group), :method => :delete, :data => {confirm: 'Are you sure?'} %>
   </p>
 <% end %>
+
+<hr>
+
+<%= render "shared/buildings", object: @group %>
