modified new user client_admin select tag

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,7 +35,7 @@
 
     <% if @current_user.admin %>
       <%= f.label 'Client admin access' %><br>
-      <%= f.select :client_admin, [true, false] %>
+      <%= select_tag :client_admin, options_for_select([true, false]) %>
     <% end %>
 
     <p>
