--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,7 +35,7 @@
 
     <% if @current_user.admin %>
       <%= f.label 'Client admin access' %><br>
-      <%= select_tag :client_admin, options_for_select([true, false]) %>
+      <%= f.select :client_admin, options_for_select([false, true]) %>
     <% end %>
 
     <p>
