--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
     </p>
     <% if @current_user.admin %>
       <%= f.label 'Client admin access' %><br>
-      <%= select_tag :client_admin, options_for_select([true, false]) %>
+      <%= f.select :client_admin, options_for_select([false, true]) %>
     <% end %>
     <p>
       <%= f.submit %>
