--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, 'Pesteco Certification' %>
+
 <h1>Pesteco Certification</h1>
 <p>Pesteco is the most certified Pest control company in Australia, across all commercial, residential and hospitality sectors.</p>
 <p>We guarantee a higher quality standard, an environmentally sustainable solution and the safest possible work environment for our client and our employees.</p>
