--- a/app/views/pages/insurance.html.erb
+++ b/app/views/pages/insurance.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, 'Pesteco Insurance' %>
+
 <h1>Pesteco Insurance</h1>
 <p>Overview of Pesteco insurance information and supporting documentation</p>
 <ul>
