--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, 'Pesteco Services' %>
+
 <h1>Pesteco services</h1>
 <p>Pesteco is the most certified pest management company in Australia, across all commercial, residential and hospitality sectors.</p>
 <p>We guarantee a higher quality standard, an environmentally sustainable solution and the safest possible work environment for our client and our employees.</p>
