--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, "Pesteco | #{@post.title}" %>
+
 <h1><%= @post.title %></h1>
 <p><%= @post.body.html_safe %></p>
 <h3>Supporting attachments</h3>
