--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, "Pesteco | #{@client.name}" %>
+
 <h1><%= @client.name %></h1>
 <p>Head office: <%= @client.address %></p>
 
