--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, 'Pesteco client login' %>
+
 <h1>Client Login</h1>
 
 <p>Enter your email and password below to access your company dashboard and Pesteco building reports.</p>
