--- a/app/views/pages/insurance.html.erb
+++ b/app/views/pages/insurance.html.erb
@@ -1,4 +1,5 @@
-<%= content_for :title, 'Pesteco Insurance' %>
+<% content_for :title, 'Pesteco Insurance' %>
+<% content_for :meta_description, 'Overview of Pesteco insurance information and supporting documentation' %>
 
 <h1>Pesteco Insurance</h1>
 <p>Overview of Pesteco insurance information and supporting documentation</p>
