--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,4 +1,5 @@
 <%= content_for :title, 'Pesteco Services' %>
+<% content_for :meta_description, 'Termite specialists - Fully certified termite detection, prevention and treatment | Insect control - Flying and crawling insect control and treatment solutions | Bird & Rodent Control - Effective programs for rat, mice, possum and bird infestations.' %>
 
 <h1>Pesteco services</h1>
 <p>Pesteco is the most certified pest management company in Australia, across all commercial, residential and hospitality sectors.</p>
