--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, 'Pesteco Certification' %>
+<% content_for :title, 'Certification | Pesteco Pest Control' %>
 <% content_for :meta_description, 'Pesteco is the most certified Pest control company in Australia, across all commercial, residential and hospitality sectors.' %>
 
 <h1>Pesteco Certification</h1>
