--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Pesteco Contact' %>
+<%= content_for :title, 'Contact | Pesteco Pest Control' %>
 
 <h1>Contact us</h1>
 <p>Tel: 0411 268 868</p>
