--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,12 +1,54 @@
-<%= content_for :title, 'Pesteco Services' %>
+<%= content_for :title, 'Services | Pesteco Pest Control' %>
 <% content_for :meta_description, 'Termite specialists - Fully certified termite detection, prevention and treatment | Insect control - Flying and crawling insect control and treatment solutions | Bird & Rodent Control - Effective programs for rat, mice, possum and bird infestations.' %>
 
 <h1>Pesteco services</h1>
 <p>Pesteco is the most certified pest management company in Australia, across all commercial, residential and hospitality sectors.</p>
 <p>We guarantee a higher quality standard, an environmentally sustainable solution and the safest possible work environment for our client and our employees.</p>
+<p>Our pest control experts are highly certified and trained with the very best and environmentally safe technologies to solve your pest issues including insects, rodents & birds, termites and more.</p>
+<br>
+<div class="row">
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= link_to insects_path do %>
+        <%= image_tag('insect_logo.svg', :class => 'pest-solution') %>
+      <% end %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Insect Control</p>
+      <p class="solution-text">Flying and crawling insect control and treatment solutions.</p>
+    </div>
+  </div>
+
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= link_to rodents_path do %>
+        <%= image_tag('rodent_logo.svg', :class => 'pest-solution') %>
+      <% end %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Rodent & Bird Control</p>
+      <p class="solution-text">Effective programs for rat, mice, possum and bird infestations.</p>
+    </div>
+  </div>
+
+  <div class="col col-4 sm-col-12">
+    <div class="col col-3 center">
+      <%= link_to termites_path do %>
+        <%= image_tag('termite_logo.svg', :class => 'pest-solution') %>
+      <% end %>
+    </div>
+    <div class="col col-9">
+      <p class="solution-heading">Termites Specialists</p>
+      <p class="solution-text">Fully certified termites detection, prevention and treatment.</p>
+    </div>
+  </div>
+</div>
+
+
 
 <h3>Expertise</h3>
 <p>Our extensive knowledge and industry experience ensures a balance between an understanding of pest control standards, occupational safety and health requirements and client satisfaction, making Pesteco a leader in the industry.</p>
+
 <p><%= link_to 'See our certification', certification_path %></p>
 <p><%= link_to 'See our insurance', insurance_path %></p>
 
@@ -18,6 +60,15 @@
 
 <p>Our team will be in touch as soon as a work order is issued and will keep all stakeholders informed throughout the job and once the job is done. </p>
 
-<h3>Reach out to us today</h3>
-<p>Tel: 0411 268 868</p>
-<p>Email: <a href="mailto:info@pesteco.com.au">info@pesteco.com.au</a></p>
+<br>
+
+<div class="row row-shade">
+  <div class="col-12 center">
+    <div class="call-out">
+      <h2>Contact us</h2>
+      <h3>0411 268 868</h3>
+
+      <h3><a href="mailto:info@pesteco.com.au">Email us</a></h3>
+    </div>
+  </div>
+</div>
