--- a/app/views/pages/insects.html.erb
+++ b/app/views/pages/insects.html.erb
@@ -2,7 +2,7 @@
 <% content_for :meta_description, 'Professional crawling and flying insects control using innovative solutions is ideal for treating insects and avoiding property damage and associated health risks.' %>
 
 
-<h1><%= image_tag('insect_logo.svg', :class => 'pest-solution') %> Insect pest control </h1>
+<h1><%= image_tag('insect_logo.svg', :class => 'pest-solution') %> Insects</h1>
 <p>Crawling and flying insects are well known for spreading disease and health risks. Exposure to cockroaches, ants, mosquitoes and flies and their droppings could put you and your customers at serious risk.</p>
 
 <p>Infestations can cost you and your business time, health and money. A quick response at the very first signs of an infestation is often essential to control insect infestations and to prevent the spread of pests.</p>
