--- a/app/views/pages/termites.html.erb
+++ b/app/views/pages/termites.html.erb
@@ -2,10 +2,10 @@
 <% content_for :meta_description, 'Think you have termites? Learn about the signs of termites, how to get rid of them and protect your home in the future with Pesteco.' %>
 
 
-<h1><%= image_tag('termite_logo.svg', :class => 'pest-solution') %> Termites pest control </h1>
+<h1><%= image_tag('termite_logo.svg', :class => 'pest-solution') %> Termites</h1>
 <p>Termites can cause extensive damage to the structure of a building if they are not managed or controlled by qualified pest professionals such as Pesteco.</p>
 
-<p>Densely populated areas, such as Sydney, Brisbane, Perth and Adelaide, face a greater risk due to the large concentration of buildings and associated climate.</p>
+<p>Densely populated areas, such as Sydney, Melbourne, Brisbane, Perth and Adelaide, face a greater risk due to the large concentration of buildings and associated climate.</p>
 
 <h2>How do you know if you have Termites?</h2>
 
