--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,7 +18,7 @@
       <% end %>
     </div>
     <div class="col col-9">
-      <p class="solution-heading">Insect Control</p>
+      <p class="solution-heading"><%= link_to 'Insect Control', insects_path %></p>
       <p class="solution-text">Flying and crawling insect control and treatment solutions.</p>
     </div>
   </div>
@@ -30,7 +30,7 @@
       <% end %>
     </div>
     <div class="col col-9">
-      <p class="solution-heading">Rodent & Bird Control</p>
+      <p class="solution-heading"><%= link_to 'Rodent & Bird Control', rodents_path %></p>
       <p class="solution-text">Effective programs for rat, mice, possum and bird infestations.</p>
     </div>
   </div>
@@ -42,10 +42,10 @@
       <% end %>
     </div>
     <div class="col col-9">
-      <p class="solution-heading">Termites Specialists</p>
+      <p class="solution-heading"><%= link_to 'Termites Specialists', termites_path %></p>
       <p class="solution-text">Fully certified termites detection, prevention and treatment.</p>
     </div>
-  </div>  
+  </div>
 </div>
 
 
@@ -72,7 +72,7 @@
 
 
 <div class="row row-shade client">
-  <div class="col-12 center">
+  <div class="col col-12 center">
     <h3 class='client-heading'>The trusted pest control expert across Australia’s leading properties</h3>
     <div class="col col-12">
       <%= image_tag('client_logos.png', :class => 'client-logos') %>
@@ -83,7 +83,7 @@
 
 
 <div class="row row-shade">
-  <div class="col-12 center">
+  <div class="col col-12 center">
     <div class="call-out">
       <h2>Contact us</h2>
       <h3>0411 268 868</h3>
