--- a/app/views/pages/rodents.html.erb
+++ b/app/views/pages/rodents.html.erb
@@ -2,7 +2,8 @@
 <% content_for :meta_description, 'Pesteco expert rodent and bird control services to prevent rats, mice and birds in your home or business with local technicians using the very best and environmentally safe technologies.' %>
 
 
-<h1><%= image_tag('rodent_logo.svg', :class => 'pest-solution') %> Rodent and bird pest control </h1>
+<h1><%= image_tag('rodent_logo.svg', :class => 'pest-solution') %> Rodent & Birds pest control</h1>
+
 <p>Rodents, birds and critter pests are well known for spreading disease and health risks. They are also able to cause considerable damage to property and pose a genuine fire risk with their habit of disrupting cables, wiring and guttering.</p>
 
 <p>Infestations can cost you and your business time, health and money. A quick response at the very first signs of an infestation is often essential to control rodent and bird infestations and to prevent the spread of disease and property damage.</p>
@@ -14,7 +15,7 @@
 <br>
 
 <div class="row row-shade">
-  <div class="col-12 center">
+  <div class="col col-12 center">
     <div class="call-out">
       <h2>Contact us</h2>
       <h3>0411 268 868</h3>
