Add structured data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,13 @@
     </script>
   </head>
   <body>
-    <header>
+    <span itemscope itemtype="http://schema.org/LocalBusiness"><header>
       <nav>
         <div class="container">
           <div class="row">
             <div class="col col-8">
               <a href="/">
-                <span class="logo"></span>
+                <span class="logo"><meta itemprop="image" content="http://dashboard.pesteco.com.au/assets/logosignature-b76bae9f84408bd014f3fa051748fc85874d43010e6f2faddb7bfb521beda705.png"></span>
               </a>
             </div>
             <div class="col col-4 right">
