--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -86,7 +86,7 @@
   <div class="col col-12 center">
     <div class="call-out">
       <h2>Contact us</h2>
-      <h3>0411 268 868</h3>
+      <h3 itemprop="telephone">0411 268 868</h3>
 
       <h3><a href="mailto:info@pesteco.com.au">Email us</a></h3>
     </div>
