Add structured data

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,9 @@
 
 <div class="row">
   <div class="col col-6 offset-3 sm-col-12 center">
-    <p class="subheading">Pesteco is Australia’s <strong>most certified pest management company</strong> - We deliver full-service pest control across retail, hospitality, commercial and residential sectors.</p>
+    <p class="subheading"><span itemprop="name">Pesteco</span> is
+<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+<span itemprop="addressCountry">Australia</span></span>’s <strong> most certified pest management company</strong> - We deliver full-service pest control across retail, hospitality, commercial and residential sectors.</p>
   </div>
 </div>
 
@@ -86,7 +88,7 @@
   <div class="col col-12 center">
     <div class="call-out">
       <h2>Contact us</h2>
-      <h3>0411 268 868</h3>
+      <h3 itemprop="telephone">0411 268 868</h3>
 
       <h3><a href="mailto:info@pesteco.com.au">Email us</a></h3>
     </div>
