Update structured data span

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     </script>
   </head>
   <body>
-    <span itemscope itemtype="http://schema.org/LocalBusiness"><header>
+  <header>
       <nav>
         <div class="container">
           <div class="row">
