--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,8 @@
     </script>
   </head>
   <body>
-  <header>
+  <span itemscope itemtype="http://schema.org/LocalBusiness">
+    <header>
       <nav>
         <div class="container">
           <div class="row">
@@ -104,6 +105,6 @@
         </div>
       </div>
     </footer>
-
+  </span>
   </body>
 </html>
