Add rodent SEO for snippet

--- a/app/views/pages/rodents.html.erb
+++ b/app/views/pages/rodents.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, 'Rodents and Birds | Pesteco Pest Control' %>
-<% content_for :meta_description, 'Pesteco expert rodent and bird control services to prevent rats, mice and birds in your home or business with local technicians using the very best and environmentally safe technologies.' %>
+<% content_for :title, 'Identify and prevent rodents and birds infestation | Pesteco Pest Control' %>
+<% content_for :meta_description, 'Information on signs of rodent or bird infestation and their associated consequences and risks. Find out how Pesteco can help protect you in your home or business with local technicians using the very best and environmentally safe technologies.' %>
 
 
 <h1><%= image_tag('rodent_logo.svg', :class => 'pest-solution') %> Rodent & Birds pest control</h1>
@@ -7,6 +7,20 @@
 <p>Rodents, birds and critter pests are well known for spreading disease and health risks. They are also able to cause considerable damage to property and pose a genuine fire risk with their habit of disrupting cables, wiring and guttering.</p>
 
 <p>Infestations can cost you and your business time, health and money. A quick response at the very first signs of an infestation is often essential to control rodent and bird infestations and to prevent the spread of disease and property damage.</p>
+
+<h2>Identify the signs of a rodent infestation</h2>
+<p>There are over 60 species of rats in Australia with the widespread and abundant brown, black or sewer rat most commonly responsible for infestations in houses, businesses, restaurants, warehouses and storage areas.</p>
+<p>Areas in Australia most at risk include greater metro areas and inner suburbs across Sydney, Melbourne and Brisbane.</p>
+<p>Warmer weather, population growth and the proliferation of restaurants and cafes are creating perfect conditions for rodents to spread.</p>
+<p>It is important to identify the signs of rodent infestations early. Such signs can include:</p>
+<ul>
+  <li><strong>Rodent droppings</strong> left behind in kitchen cabinets, pantries, cupboards, drawers, sinks and other food areas;</li>
+  <li><strong>Urine pools</strong> or trails sometimes found leading to dirt mounds;</li>
+  <li><strong>Nesting material</strong> such as shredded paper, fabric, or dried plant matter; </li>
+  <li><strong>Chew marks</strong> on food packaging, containers or wires;</li>
+  <li><strong>Squeaks and noises</strong> which are more apparent in evenings; and</li>
+  <li><strong>Stale smells</strong> coming from hidden areas.</li>
+</ul>
 
 <h2>Pesteco rodent and bird control</h2>
 <p>Pesteco are the experts in rodent and bird pest control across Australia. Our trained professionals can both detect existing infestations and help you prevent future problems.</p>
