--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -88,9 +88,9 @@
   <div class="col col-12 center">
     <div class="call-out">
       <h2>Contact us</h2>
-      <h3 itemprop="telephone">0411 268 868</h3>
+      <h3 itemprop="telephone">Tel: 0411 268 868</h3>
 
-      <h3><a href="mailto:info@pesteco.com.au">Email us</a></h3>
+      <h3><a href="mailto:info@pesteco.com.au">Email: info@pesteco.com.au</a></h3>
     </div>
   </div>
 </div>
