--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,12 +23,14 @@
   <tr>
     <th>Name</th>
     <th>Address</th>
+    <th>Incidents</th>
     <th>Reports</th>
   </tr>
   <% @user.buildings.order('name ASC').each do |building| %>
   <tr>
     <td><%= link_to building.name, building_path(building) %></td>
     <td><%= building.address %></td>
+    <td><%= building.incidents.length %></td>
     <td><%= building.reports.length %></td>
   </tr>
   <% end %>
