Update forms required fields

--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -10,7 +10,7 @@
     </p>
     <p>
       <%= f.label 'Description of incident' %><br>
-      <%= f.text_area :description%>
+      <%= f.text_area :description, :required => true%>
     </p>
 
     <!-- ADMIN can respond to incidents -->
