Add safety post category

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,7 @@
             <ul>
               <li><%= link_to 'Certification', certification_path %></li>
               <li><%= link_to 'Insurance', insurance_path %></li>
+              <li><%= link_to 'Material Safety Data Sheets', safety_path %></li>
             </ul>
           </div>
           <div class="col sm-col-12 col-4">
