--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -6,7 +6,7 @@
 
     <p>
       <%= f.label 'Date of incident' %><br>
-      <%= f.date_field :date_report, :autofocus => true, :required => true %>
+      <%= f.date_field :date_report, :autofocus => true, :required => true, min: Date.new(2017, 01, 01), max: Date.today %>
     </p>
     <p>
       <%= f.label 'Description of incident' %><br>
